update rocketmq 4.9.4 => 5.2.0 docker镜像升级 update kafka 3.2.0 => 3.6.2 docker镜像升级

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -343,9 +343,9 @@ services:
       - elasticsearch
     network_mode: "host"
 
-  mqnamesrv:
-    image: apache/rocketmq:4.9.4
-    container_name: mqnamesrv
+  rmqnamesrv:
+    image: apache/rocketmq:5.2.0
+    container_name: rmqnamesrv
     ports:
       - "9876:9876"
     environment:
@@ -355,25 +355,25 @@ services:
       - /docker/rocketmq/namesrv/logs:/home/rocketmq/logs/rocketmqlogs
     network_mode: "host"
 
-  mqbroker1:
-    image: apache/rocketmq:4.9.4
-    container_name: mqbroker1
+  rmqbroker1:
+    image: apache/rocketmq:5.2.0
+    container_name: rmqbroker1
     ports:
       - "10911:10911"
       - "10909:10909"
       - "10912:10912"
     environment:
       JAVA_OPT_EXT: -server -Xms512M -Xmx512M -Xmn256m
-    command: sh mqbroker -c /home/rocketmq/rocketmq-4.9.4/conf/broker.conf
+    command: sh mqbroker --enable-proxy -c /home/rocketmq/rocketmq-5.2.0/conf/broker.conf
     depends_on:
       - mqnamesrv
     volumes:
-      - /docker/rocketmq/broker1/conf/broker.conf:/home/rocketmq/rocketmq-4.9.4/conf/broker.conf
+      - /docker/rocketmq/broker1/conf/broker.conf:/home/rocketmq/rocketmq-5.2.0/conf/broker.conf
       - /docker/rocketmq/broker1/logs:/home/rocketmq/logs/rocketmqlogs
       - /docker/rocketmq/broker1/store:/home/rocketmq/store
     network_mode: "host"
 
-  mqconsole:
+  rmqconsole:
     image: styletang/rocketmq-console-ng
     container_name: mqconsole
     ports:
@@ -381,7 +381,7 @@ services:
     environment:
       JAVA_OPTS: -Dserver.port=19876 -Drocketmq.namesrv.addr=127.0.0.1:9876 -Dcom.rocketmq.sendMessageWithVIPChannel=false
     depends_on:
-      - mqnamesrv
+      - rmqnamesrv
     network_mode: "host"
 
   rabbitmq:
@@ -417,7 +417,7 @@ services:
     network_mode: "host"
 
   kafka:
-    image: 'bitnami/kafka:3.2.0'
+    image: 'bitnami/kafka:3.6.2'
     container_name: kafka
     ports:
       - "9092:9092"
