fix 修复 新增模型xml被拦截问题

--- a/config/nacos/ruoyi-gateway.yml
+++ b/config/nacos/ruoyi-gateway.yml
@@ -5,6 +5,7 @@ security:
     enabled: true
     excludeUrls:
       - /system/notice
+      - /workflow/model/save
       - /workflow/model/editModelXml
   # 不校验白名单
   ignore:
