--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -374,8 +374,8 @@ services:
     network_mode: "host"
 
   rmqconsole:
-    image: styletang/rocketmq-console-ng
-    container_name: mqconsole
+    image: apacherocketmq/rocketmq-dashboard:latest
+    container_name: rmqconsole
     ports:
       - "19876:19876"
     environment:
