--- a/ruoyi-example/ruoyi-test-mq/src/main/resources/application.yml
+++ b/ruoyi-example/ruoyi-test-mq/src/main/resources/application.yml
@@ -33,6 +33,8 @@ spring:
     streams:
       properties:
         application.id: kafka-streams-id # 应用ID
+    properties:
+      auto.create.topics.enable: true # 开启自动创建话题功能，默认是false，根据需要设置
 
 --- # rocketmq 配置
 rocketmq:
