--- a/config/nacos/ruoyi-job.yml
+++ b/config/nacos/ruoyi-job.yml
@@ -24,6 +24,7 @@ snail-job:
     server-name: ruoyi-snailjob-server
     # 服务名优先 ip垫底
     host: 127.0.0.1
-    port: 1788
+    # 端口 随着主应用端口漂移 避免集群冲突
+    port: 2${server.port}
   # 详见 script/sql/ry_job.sql `sj_namespace` 表
   namespace: ${spring.profiles.active}
