--- a/config/nacos/ruoyi-job.yml
+++ b/config/nacos/ruoyi-job.yml
@@ -27,3 +27,5 @@ snail-job:
     port: 1788
   # 详见 script/sql/ry_job.sql `sj_namespace` 表
   namespace: ${spring.profiles.active}
+  # 随主应用端口飘逸
+  port: 2${server.port}
