--- a/ruoyi-common/ruoyi-common-bom/pom.xml
+++ b/ruoyi-common/ruoyi-common-bom/pom.xml
@@ -14,7 +14,7 @@
     </description>
 
     <properties>
-        <revision>2.2.0-BETA</revision>
+        <revision>2.2.0-BETA2</revision>
     </properties>
 
     <dependencyManagement>
