update 优化 调整sentinel日志级别 屏蔽心跳日志

--- a/config/nacos/application-common.yml
+++ b/config/nacos/application-common.yml
@@ -152,6 +152,7 @@ logging:
     org.springframework: warn
     org.apache.dubbo: warn
     com.alibaba.nacos: warn
+    com.alibaba.csp.sentinel: warn
     org.mybatis.spring.mapper: error
     org.apache.dubbo.config: error
     # 临时处理 spring 调整日志级别导致启动警告问题 不影响使用等待 alibaba 适配
