update 优化 放行 sse 关闭接口

--- a/config/nacos/ruoyi-gateway.yml
+++ b/config/nacos/ruoyi-gateway.yml
@@ -18,6 +18,7 @@ security:
       - /auth/register
       - /auth/tenant/list
       - /resource/sms/code
+      - /resource/sse/close
       - /*/v3/api-docs
       - /*/error
       - /csrf
