update 优化 dubbo元数据注册redis支持timeout(注意时间必须使用数字)

--- a/config/nacos/application-common.yml
+++ b/config/nacos/application-common.yml
@@ -107,7 +107,8 @@ spring:
       # redis 密码必须配置
       password: ruoyi123
       database: 0
-      timeout: 10s
+      # 需要使用数字
+      timeout: 10000
       ssl.enabled: false
 
 # redisson 配置
